tests/__snapshots__/api-toBeBoolean.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeBoolean: stderr 1`] = `
"Error: The source type is 'string'.

   7 |   expect(returnsBoolean()).type.toBeBoolean();
   8 | 
>  9 |   expect(returnsString()).type.toBeBoolean();
     |                                ^
  10 | });
  11 | 
  12 | test("is NOT boolean?", () => {

       at ./__typetests__/toBeBoolean.tst.ts:9:32 ❭ is boolean?

Error: The source type is 'boolean'.

  13 |   expect(returnsString()).type.not.toBeBoolean();
  14 | 
> 15 |   expect(returnsBoolean()).type.not.toBeBoolean();
     |                                     ^
  16 | });
  17 | 

       at ./__typetests__/toBeBoolean.tst.ts:15:37 ❭ is NOT boolean?

"
`;

exports[`toBeBoolean: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeBoolean.tst.ts
  × is boolean?
  × is NOT boolean?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
